# speech-to-video-orchestrator

./: .env  .gitignore  README.md  index.html  logger.py  orchestrator.py  pyproject.toml
core/: signals.py
tests/: test_automation.py  test_pipeline.py
