[project]
name = "speech-to-video-orchestrator"
version = "0.1.0"
description = "Orchestrator for connecting Speech-to-Speech (S2S) and Speech-to-Video (S2V) pipelines"
authors = [
    { name = "Author", email = "author@example.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "pytest",
    "httpx",
    "python-dotenv>=1.2.2",
    "pytest-asyncio>=1.4.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
